fixing css code since there is spacing on the right side of the container grid

--- a/assets/main.css
+++ b/assets/main.css
@@ -27,15 +27,17 @@ body,html {
 
 .containerGrid {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     flex-wrap: wrap;
+    align-content: flex-start;
     background-color: var(--primary-color);
     width: 500px;
     height: 500px;
+
 }
 
 .containerGrid div {
-    border: 1px solid white;
-    width: 20px;
-    height: 20px;
+    border: 1px solid rgb(255, 0, 0);
+    width: 40px;
+    height: 40px;
 }
